added in exceptions access tblPO tblUnit updated

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 !/angel_jpcode3/angel_pythoncode_mod3.ipynb
 !/angel_jpcode3/angel_tracker_et.ipynb
 !/angel_jpcode3/angel_access_et.ipynb
+!/angel_jpcode3/angel_access_tblPO.ipynb
+!/angel_jpcode3/angel_access_tblUnit.ipynb
