adding in revised file csv in folder

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 
 # except angel_jpcode3 file
 !/angel_jpcode3/
-!/angel_jpcode3/tblProduct-export-26-08-2025-consolidated.txt
+!/angel_jpcode3/tblProduct-export-26-08-2025-consolidated.csv
 
 
 # except angel_pythoncode_mod3.ipynb
