added fun folder for modularisation prep work in progress

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # except angel_jpcode3 file
 !/angel_jpcode3/
+!/angel_jpcode3/fun
 !/angel_jpcode3/tblProduct-export-26-08-2025-consolidated.csv
 !/angel_jpcode3/fnd_gfm_50117894-req-summary-jan-dec-2023-AN1446-ICT-consolidated.csv
 !/angel_jpcode3/fnd_gfm_50117895-req-summary-jan-dec-2024-AN1446-ICT-consolidated.csv
