multiple trial and error done for logging.ini all working

--- a/angel_jpcode3/logging.ini
+++ b/angel_jpcode3/logging.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,fun,tests
+keys=root
 
 [handlers]
 keys=console,file
@@ -9,19 +9,19 @@ keys=std
 
 [logger_root]
 level=WARNING
-handlers=console
-
-[logger_fun]
-level=INFO
 handlers=console,file
-qualname=fun
-propagate=0
 
-[logger_tests]
-level=DEBUG
-handlers=console,file
-qualname=tests
-propagate=0
+#[logger_fun]
+#level=INFO
+#handlers=console,file
+#qualname=fun
+#propagate=0
+
+#[logger_tests]
+#level=DEBUG
+#handlers=console,file
+#qualname=tests
+#propagate=0
 
 [handler_console]
 class=StreamHandler
@@ -33,7 +33,7 @@ args=(sys.stdout,)
 class=FileHandler
 level=INFO
 formatter=std
-args=('logs/app.log','a','utf-8')
+args=('%(logfilename)s','a','utf-8')
 
 [formatter_std]
 format=%(asctime)s | %(levelname)s | %(name)s | %(message)s
