--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ contourpy==1.3.2
 cycler==0.12.1
 debugpy==1.8.15
 decorator==5.2.1
+exceptiongroup==1.3.0
 executing==2.2.0
 fonttools==4.59.0
+iniconfig==2.1.0
 jupyter_core==5.8.1
 kiwisolver==1.4.8
 matplotlib==3.10.3
@@ -17,11 +19,13 @@ pandas==2.3.1
 parso==0.8.4
 pillow==11.3.0
 platformdirs==4.3.8
+pluggy==1.6.0
 prompt_toolkit==3.0.51
 psutil==7.0.0
 pure_eval==0.2.3
 Pygments==2.19.2
 pyparsing==3.2.3
+pytest==8.4.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pywin32==311
@@ -29,6 +33,7 @@ pyzmq==27.0.0
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
+tomli==2.2.1
 tornado==6.5.1
 traitlets==5.14.3
 typing_extensions==4.14.1
