--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ contourpy==1.3.2
 cycler==0.12.1
 debugpy==1.8.15
 decorator==5.2.1
+et_xmlfile==2.0.0
 exceptiongroup==1.3.0
 executing==2.2.0
 fonttools==4.59.0
@@ -14,6 +15,7 @@ matplotlib==3.10.3
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==2.2.6
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.1
 parso==0.8.4
