--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asttokens==3.0.0
 colorama==0.4.6
 contourpy==1.3.2
+coverage==7.10.6
 cycler==0.12.1
 debugpy==1.8.15
 decorator==5.2.1
@@ -28,6 +29,7 @@ pure_eval==0.2.3
 Pygments==2.19.2
 pyparsing==3.2.3
 pytest==8.4.1
+pytest-cov==6.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pywin32==311
